--- a/Formula/ratisui.template
+++ b/Formula/ratisui.template
@@ -1,15 +1,19 @@
 class Ratisui < Formula
   desc "Redis TUI build with Ratatui, written in Rust"
   homepage "https://github.com/honhimW/ratisui"
-  # version "0.5.4"
+  # version "x.y.z"
   license all_of: ["MIT"]
 
   release_version = "{{VERSION}}"
 
   if OS.mac?
-    odie "Intel macOS is not supported" if Hardware::CPU.intel?
-    url "https://github.com/honhimW/ratisui/releases/download/#{release_version}/ratisui-mac.tar.gz"
-    sha256 "{{MAC_AARCH64_SHA256}}"
+    if Hardware::CPU.intel?
+      url "https://github.com/honhimW/ratisui/releases/download/#{release_version}/ratisui-mac-intel.tar.gz"
+      sha256 "{{MAC_INTEL_SHA256}}"
+    else
+      url "https://github.com/honhimW/ratisui/releases/download/#{release_version}/ratisui-mac-aarch64.tar.gz"
+      sha256 "{{MAC_AARCH64_SHA256}}"
+    end
   elsif OS.linux?
     if Hardware::CPU.arm?
       url "https://github.com/honhimW/ratisui/releases/download/#{release_version}/ratisui-linux-aarch64.tar.gz"
